# Guide to building python package:
# https://packaging.python.org/en/latest/tutorials/packaging-projects/#generating-distribution-archives


[tool.poetry]
name = "textdungeon"
version = "1.0"
description = "suffer alone in your terminal!"
authors = [
    "Matthew Bender <matthewbender65@gmail.com>",
]
maintainers = [
    "Noah Dinan <noah@shinysocks.net>",
]

packages = [
    { include = "textdungeon" },
    { include = "textdungeon/*.py" },
]

license = "MIT"
readme = "README.md"
repository = "https://github.com/Masbender/text-dungeon"
keywords = ["text", "dungeon", "game"]

[tool.poetry.scripts]
textdungeon = "textdungeon:main"

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
